--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -3,35 +3,12 @@
 <html>
 <head>
     <title>Sales Dashboard</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> 
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script> </head>
 <body>
-    <h1>Sales Dashboard</h1>
-
-    <div id="bar-chart"></div>
-    <div id="pie-chart"></div>
-
-    <script>
-        fetch('/data')
-        .then(response => response.json())
-        .then(data => {
-            // Bar chart
-            var barData = [{
-                x: data.products,
-                y: data.sales_quantities,
-                type: 'bar'
-            }];
-            Plotly.newPlot('bar-chart', barData);
-
-            // Pie chart (using aggregated revenue by category)
-            var pieData = [{
-                labels: Object.keys(data.sales_revenues_by_category),
-                values: Object.values(data.sales_revenues_by_category),
-                type: 'pie'
-            }];
-            Plotly.newPlot('pie-chart', pieData);
-
-        });
-    </script>
+    <div class="container">  </div> <div class="container">
+        <h1>Welcome to the Sales Dashboard</h1>
+        <a href="/dashboard" class="btn btn-primary">View Dashboard</a>
+    </div>
 </body>
 </html>
