--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html (Improved) -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,17 +5,14 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-    <h1>Sales Data Visualization</h1>
+    <h1>Sales Dashboard</h1>
 
     <div id="bar-chart"></div>
     <div id="pie-chart"></div>
 
     <script>
-        var bar_graph_data = {{ bar_chart | tojson }};
-        Plotly.newPlot('bar-chart', bar_graph_data); // Use newPlot
-
-        var pie_chart_data = {{ pie_chart | tojson }};
-        Plotly.newPlot('pie-chart', pie_chart_data); // Use newPlot
+        Plotly.newPlot('bar-chart', {{bar_graph_json | safe}});
+        Plotly.newPlot('pie-chart', {{pie_graph_json | safe}});
     </script>
 </body>
 </html>
