Add generated HTML file 1

--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -6,20 +6,18 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-    <h1>Sales Data Visualization</h1>
+    <h1>Sales Dashboard</h1>
 
-    <h2>Bar Chart</h2>
+    <h2>Sales by Product</h2>
     <div id="bar-chart"></div>
 
-    <h2>Pie Chart</h2>
+    <h2>Sales by Category</h2>
     <div id="pie-chart"></div>
 
     <script>
-        var bar_graphJSON = {{bar_graphJSON | safe}};
-        Plotly.newPlot('bar-chart', bar_graphJSON.data, bar_graphJSON.layout); // Use newPlot
+        Plotly.newPlot('bar-chart', {{bar_chart | safe}});
+        Plotly.newPlot('pie-chart', {{pie_chart | safe}});
 
-        var pie_graphJSON = {{pie_graphJSON | safe}};
-        Plotly.newPlot('pie-chart', pie_graphJSON.data, pie_graphJSON.layout); // Use newPlot
     </script>
 </body>
 </html>
