--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,19 +7,15 @@
 <body>
     <h1>Sales Dashboard</h1>
 
-    <h2>Bar Chart</h2>
     <div id="bar-chart"></div>
-
-    <h2>Pie Chart</h2>
     <div id="pie-chart"></div>
 
-<script>
-    var bar_graph = {{bar_chart | safe}};
-    Plotly.newPlot('bar-chart', bar_graph); // Use newPlot for better performance
+    <script>
+        var bar_chart_data = {{ bar_chart | safe }};
+        Plotly.newPlot('bar-chart', JSON.parse(bar_chart_data).data, JSON.parse(bar_chart_data).layout);
 
-    var pie_graph = {{pie_chart | safe}};
-    Plotly.newPlot('pie-chart', pie_graph); // Use newPlot
-</script>
-
+        var pie_chart_data = {{ pie_chart | safe }};
+        Plotly.newPlot('pie-chart', JSON.parse(pie_chart_data).data, JSON.parse(pie_chart_data).layout);
+    </script>
 </body>
 </html>
