--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,3 +1,4 @@
+<!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,15 +8,15 @@
 <body>
     <h1>Sales Dashboard</h1>
 
+    <h2>Sales by Product</h2>
     <div id="bar-chart"></div>
+
+    <h2>Sales by Category</h2>
     <div id="pie-chart"></div>
 
     <script>
-        var bar_chart_data = {{ bar_chart | safe }};
-        Plotly.newPlot('bar-chart', JSON.parse(bar_chart_data).data, JSON.parse(bar_chart_data).layout);
-
-        var pie_chart_data = {{ pie_chart | safe }};
-        Plotly.newPlot('pie-chart', JSON.parse(pie_chart_data).data, JSON.parse(pie_chart_data).layout);
+        Plotly.newPlot('bar-chart', {{ bar_graph_json | safe }});
+        Plotly.newPlot('pie-chart', {{ pie_graph_json | safe }});
     </script>
 </body>
 </html>
