--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,27 +1,20 @@
+<!-- templates/index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Sales Dashboard</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  <!-- No changes here -->
 </head>
 <body>
-    <h1>Sales Data Visualization</h1>
+    <h1>Sales Dashboard</h1>
 
-    <h2>Bar Chart</h2>
     <div id="bar-chart"></div>
-
-    <h2>Pie Chart</h2>
     <div id="pie-chart"></div>
 
-
     <script>
-        var bar_chart_data = JSON.parse('{{bar_chart | safe}}'); // Parse JSON string
-        Plotly.newPlot('bar-chart', bar_chart_data);
-
-
-        var pie_chart_data = JSON.parse('{{pie_chart | safe}}'); // Parse JSON string
-        Plotly.newPlot('pie-chart', pie_chart_data);
-
+        Plotly.newPlot('bar-chart', {{ bar_chart | safe }});
+        Plotly.newPlot('pie-chart', {{ pie_chart | safe }});
     </script>
 </body>
 </html>
