Add generated HTML file 1

--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,10 +1,9 @@
-<!-- templates/index.html -->
+<!-- templates/dashboard.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Sales Dashboard</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>  <!-- No changes here -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
     <h1>Sales Dashboard</h1>
@@ -13,8 +12,11 @@
     <div id="pie-chart"></div>
 
     <script>
-        Plotly.newPlot('bar-chart', {{ bar_chart | safe }});
-        Plotly.newPlot('pie-chart', {{ pie_chart | safe }});
+        var bar_chart_data = {{ bar_chart | safe }};
+        Plotly.newPlot('bar-chart', bar_chart_data.data, bar_chart_data.layout);
+
+        var pie_chart_data = {{ pie_chart | safe }};
+        Plotly.newPlot('pie-chart', pie_chart_data.data, pie_chart_data.layout);
     </script>
 </body>
 </html>
