--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,7 +1,7 @@
-<!-- templates/dashboard.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Sales Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
@@ -12,11 +12,8 @@
     <div id="pie-chart"></div>
 
     <script>
-        var bar_chart_data = {{ bar_chart | safe }};
-        Plotly.newPlot('bar-chart', bar_chart_data.data, bar_chart_data.layout);
-
-        var pie_chart_data = {{ pie_chart | safe }};
-        Plotly.newPlot('pie-chart', pie_chart_data.data, pie_chart_data.layout);
+        Plotly.newPlot('bar-chart', {{bar_chart | safe}});
+        Plotly.newPlot('pie-chart', {{pie_chart | safe}});
     </script>
 </body>
 </html>
