--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Sales Dashboard</title>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 <body>
-    <h1>Sales Dashboard</h1>
+    <h1>Sales Data Visualization</h1>
 
-    <div id="bar-chart"></div>
-    <div id="pie-chart"></div>
+    <h2>Sales by Product (Bar Chart)</h2>
+    <div id="bar-chart" style="width:800px;height:400px;"></div>  <!-- Set size -->
+
+    <h2>Sales Distribution (Pie Chart)</h2>
+    <div id="pie-chart" style="width:600px;height:400px;"></div>  <!-- Set size -->
 
     <script>
-        Plotly.newPlot('bar-chart', {{bar_chart | safe}});
-        Plotly.newPlot('pie-chart', {{pie_chart | safe}});
+        var bar_chart_data = {{ bar_chart | safe }};
+        Plotly.newPlot('bar-chart', bar_chart_data.data, bar_chart_data.layout);
+
+        var pie_chart_data = {{ pie_chart | safe }};
+        Plotly.newPlot('pie-chart', pie_chart_data.data, pie_chart_data.layout);
+
     </script>
 </body>
 </html>
