--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,4 +1,4 @@
-<!-- templates/index.html (No significant security concerns in template) -->
+<!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,19 +8,14 @@
 <body>
     <h1>Sales Dashboard</h1>
 
-    <h2>Sales by Product (Bar Chart)</h2>
     <div id="bar-chart"></div>
-
-    <h2>Sales Distribution (Pie Chart)</h2>
-    <div id="pie-chart"></div>
-
     <script>
-        var bar_chart_data = {{ bar_chart | safe }};
-        Plotly.newPlot('bar-chart', bar_chart_data.data, bar_chart_data.layout);
+        Plotly.newPlot('bar-chart', JSON.parse('{{ bar_chart | safe }}'));
+    </script>
 
-        var pie_chart_data = {{ pie_chart | safe }};
-        Plotly.newPlot('pie-chart', pie_chart_data.data, pie_chart_data.layout);
-
+    <div id="pie-chart"></div>
+    <script>
+        Plotly.newPlot('pie-chart', JSON.parse('{{ pie_chart | safe }}'));
     </script>
 </body>
 </html>
