--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,4 +1,3 @@
-<!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,15 +7,15 @@
 <body>
     <h1>Sales Dashboard</h1>
 
-    <div id="product-revenue-chart"></div>
-    <div id="daily-revenue-chart"></div>
+    <div id="bar-chart"></div>
+    <div id="pie-chart"></div>
 
-    <script type="text/javascript">
-        var productRevenueGraph = {{ product_revenue_graphJSON | safe }};
-        Plotly.newPlot('product-revenue-chart', productRevenueGraph.data, productRevenueGraph.layout);  // Use newPlot
+    <script>
+        var barChartData = JSON.parse('{{ bar_chart | safe }}'); // Parse JSON string
+        Plotly.newPlot('bar-chart', barChartData);
 
-        var dailyRevenueGraph = {{daily_revenue_graphJSON | safe}};
-        Plotly.newPlot('daily-revenue-chart', dailyRevenueGraph.data, dailyRevenueGraph.layout);  // Use newPlot
+        var pieChartData = JSON.parse('{{ pie_chart | safe }}'); // Parse JSON string
+        Plotly.newPlot('pie-chart', pieChartData);
 
     </script>
 </body>
