Add generated HTML file 1

--- a/templates/dashboard_1.html
+++ b/templates/dashboard_1.html
@@ -1,3 +1,4 @@
+<!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,17 +8,17 @@
 <body>
     <h1>Sales Dashboard</h1>
 
-    <h2>Bar Chart</h2>
+    <h2>Sales Amount by Product</h2>
     <div id="bar-chart"></div>
 
-    <h2>Pie Chart</h2>
+    <h2>Sales Quantity by Product</h2>
     <div id="pie-chart"></div>
 
     <script>
-        var bar_chart_data = JSON.parse('{{ bar_chart | safe }}');
+        var bar_chart_data = {{ bar_chart | safe }};
         Plotly.newPlot('bar-chart', bar_chart_data.data, bar_chart_data.layout);
 
-        var pie_chart_data = JSON.parse('{{ pie_chart | safe }}');
+        var pie_chart_data = {{ pie_chart | safe }};
         Plotly.newPlot('pie-chart', pie_chart_data.data, pie_chart_data.layout);
 
     </script>
